tests/ui/inference/return-block-type-inference-15965.stderr
error[E0282]: type annotations needed
  --> $DIR/return-block-type-inference-15965.rs:5:9
   |
LL |         { return () }
   |         ^^^^^^^^^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
