tests/ui/inference/return-block-type-inference-15965.rs
//! Regression test for https://github.com/rust-lang/rust/issues/15965

fn main() {
    return
        { return () }
//~^ ERROR type annotations needed [E0282]
    ()
    ;
}
